templates/eugenes-renovations/style.css
/* || General Styles */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
 }

body {
    overflow-x: hidden;
    font-family: -apple-system, Helvetica, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', arial, sans-serif;
}
section {
    min-height: 45em;
    padding: 50px 0;
}
section h2{
    margin: 50px;
}

section, footer {
    width: 100%;
    text-align: center;
}
a {
    color: #b4a5a5;
    transition: 200ms ease;
    text-decoration: none;
}

a:hover{
    text-decoration: underline;
    cursor: pointer;
}
a:visited , a:focus, a:active{
    text-decoration: none;
}

/* || Typography */
@font-face {
    font-family: 'Freeway Gothic';
    src: url('assets/fwygoth-webfont.woff2') format('woff2');
    src: url('assets/fwygoth-webfont.woff') format('woff');
  }

h1 {
    font-family: 'Freeway Gothic', Helvetica, sans-serif;
}

h2{
    font-size: 4em;
}

h2, h3{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', sans-serif;
}

h3{
    font-weight: lighter;
}


/* || Navigation */
nav{
    width: 100%;
    max-width: 100%;
    height: auto;
    background-color: #151515;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    font-size: 1.4em;
    position: fixed;
    z-index: 10;
    
}
nav a {
    padding: 15px;
    transition: opacity 800ms ease;
}

nav > a:nth-child(1){transition-delay: 100ms;}
nav > a:nth-child(2){transition-delay: 200ms;}
nav a:nth-child(3){transition-delay: 300ms;}
nav a:nth-child(4){transition-delay: 400ms;}
nav a:nth-child(5){transition-delay: 500ms;}

#hamburger {
    display: none;
    display: flex;
    flex-direction: column;
    padding: 15px;
}

#top, #mid, #bottom {
    width: 32px;
    height: 3px;
    background-color: #b4a5a5;
    margin: 2px;
    transition: all 700ms ease;
}

/* Hamburger Icon to "X" transforms" */

.topX {
    display: none;
}

.midX {
    transform: rotate(140deg);
}

.bottomX {
    transform: rotate(40deg) translate(-3px,-4px);
}

.nav-display {
    display: block!important;
}

.opaque {
    opacity: 1;
}

/* || Header */
header{
    width: 100%;
    height: 90vh;
    background: url("https://images.pexels.com/photos/132340/pexels-photo-132340.jpeg");
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #b4a5a5;
    background-attachment: fixed;
    background-position: center;
}

header::after{
    content: '';
    width: 100%;
    height: 90vh;
    background-color: #301b3f;
    opacity: 0.85;
    z-index: 0;
    position: absolute;
}
header h1{
    font-size: 4em;
}
header > h1 ,span {
    z-index: 1;
}


/* || Mission */

#mission {
    background-color: #b4a5a5;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#mission p {
    max-width: 30%;
    font-size: 2em;
    font-weight: lighter;
    text-align: justify;
}


/* || Showcase */
#work {
    background-color: #301b3f;
    color: #b4a5a5;
    display: flex;
    flex-direction: column;
    align-items: center;
}


.pictures {
    display: flex;
    flex-wrap: wrap;
    padding: 0 5px;
    max-width: 60%;
}

.col {
    flex: 50%;
    max-width: 50%;
    padding: 0 5px;
}

.col img {
    margin-top: 8px;
    vertical-align: middle;
    width: 100%;
}

@media screen and (max-width: 950px) {
    .col {
      flex: 100%;
      max-width: 100%;
    }
}
  

/* || Team */
#team {
    background-color: #3c415c;
    color: #b4a5a5;
}

.people {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 6% 15%;
}

.people div {
    display: flex;
    flex-direction: column;
    padding: 25px;
    font-size: 3em;
    justify-content: center;
    position: relative;
}

.people div > img {
    border-radius: 100%;
    border: 2px solid #b4a5a5;
    box-shadow: 0 0 45px rgba(0, 0, 0, 0.75);
    max-width: 5em;
    max-height: 5em;
    margin: 0.8em 0;
}

 .people div > span{
    color: #b4a5a5;
    background-color: #301b3f;
    border-radius: 100%;
    transition: all 450ms cubic-bezier(0, -0.01, 0.85, 1.25);
    position: absolute;
    width: 5em;
    height: 5em;
    top: calc(25px + 0.8em);
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 0;
    border: 2px solid;
 }
 .people div > span:hover{
    opacity: 1;
    background-color: rgba(48, 27, 63, 0.95)
 }


/* || Team Title */
#team h2{
    margin-bottom: 0 !important;
}
#team:nth-child(2){
    font-size: 1.4em;
}


/* || Contact  */


#contact-title{
    width: 100%;
    text-align: center;
    background-color: #b4a5a5;
    padding-top: 1em;
}

#contact {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 3em;
    background: #b4a5a5;
}

#contact a {
    color: #000;
}

#contact div {
    padding: 35px;
}

#contact div > form {
    display: flex;
    flex-direction: column;
    width: 25em;
    font-size: 1.5em;
    text-align: left;
}

form > label, input, textarea {
    margin: 6px 5px;
    border: 0;
    padding: 5px;
}

form > input, textarea {
    min-height: 3em;
    font-size: 0.65em;
}

#contact div > iframe {
    margin: 25px;
}

#submit{
    padding: 10px;
    background: #301b3f;
    border: 0;
    color: #b4a5a5;
    font-size: 0.65em;
}


/* || Footer  */

footer {
    padding: 80px;
    justify-content: space-around;
    display: flex;
    background: #151515;
    color: #b4a5a5;
    align-items: center;
    flex-wrap: wrap;
}
 footer h3 {
    padding: 20px;
 }

footer div:nth-child(1) {
    flex-basis: 0;
    flex-grow: 1;
}

footer div:nth-child(2){
    flex-basis: 0;
    flex-grow: 3;
}

footer div:nth-child(3){
    flex-basis: 0;
    flex-grow: 1;
}


footer a > svg {
    background: #301b3f;
    padding: 10px;
}

@media screen and (max-width: 650px) {

    #contact div > form {
      font-size: 0.9em;
      margin: 15px;
    }

    iframe {
        max-width: 99%;
    }
    
    #hamburger {
        display: block;
    }

    nav {
        flex-direction: column;
    }

    nav a {
        display: none;
        opacity: 0;
    }
}

@media screen and (max-width: 845px) {
    header h1 {
        text-align: center;
        font-size: 2.2em;
    }
    #mission p {
        max-width: 75%;
    }

    footer {
      flex-direction: column;
    }
}

